Modified: service url function & add show label config

--- a/src/main/resources/message/FormFilesZipElement.properties
+++ b/src/main/resources/message/FormFilesZipElement.properties
@@ -13,3 +13,4 @@ form.formfileszipelement.downloadAll=Download All Files in Form
 form.formfileszipelement.downloadSelectedFields=Download from Selected Fields in Form
 form.formfileszipelement.downloadFields=Download Fields
 form.formfileszipelement.fieldId=Field ID
+form.formfileszipelement.showLabel=Show Label
